php-apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
spec:
  selector:
    matchLabels:
      run: php-apache
  replicas: 1
  template:
    metadata:
      labels:
        run: php-apache
    spec:
      containers:
      - name: metrics-server
          image: k8s.gcr.io/metrics-server-amd64:v0.3.1
          command:
            - /metrics-server
            - --kubelet-insecure-tls
      
      - name: php-apache
        image: k8s.gcr.io/hpa-example
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  labels:
    run: php-apache
spec:
  ports:
  - port: 8000
  selector:
    run: php-apache
